--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,33 @@
-node-modules/
+# Ignorar arquivos de compilação TypeScript
+/dist/
 
-.env
+# Ignorar módulos npm instalados
+/node_modules/
+
+# Ignorar arquivos de log e cache
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+.pnp/
+.pnp.js
+
+# Ignorar arquivos de configuração específicos do editor
+.vscode/
+.idea/
+
+# Ignorar arquivos de build ou de configuração específicos do sistema operacional
+.DS_Store
+Thumbs.db
+
+# Ignorar arquivos temporários
+*.tmp
+*.bak
+*.swp
+
+# Ignorar o arquivo package-lock.json
+package-lock.json
+
+# Ignorar módulos npm instalados
+/node_modules/
+package-lock.json
