--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "testEnvironment": "node"
   },
   "dependencies": {
-    "d3": "^7.9.0"
+    "d3": "^7.9.0",
+    "express": "^4.19.2"
   }
 }
